--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "static",
     "ssg"
   ],
-  "repository": "https://github.com/contentful-userland/gatsby-contentful-starter",
+  "repository": "https://github.com/ptrcklehmann/saskia",
   "success_url": "/",
   "buildpacks": [
     {
