--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Contentful Gatsby Starter",
-  "description": "Gatsby starter for a Contentful project.",
+  "name": "Dr. Saskia Eschenbacher",
+  "description": "Systemische Therapie & Beratung in Augsburg, München, Berlin und Umgebung.",
   "keywords": [
     "contentful",
     "gatsby",
