--- a/package.json
+++ b/package.json
@@ -8,24 +8,28 @@
     "url": "https://github.com/contentful/starter-gatsby-blog/issues"
   },
   "dependencies": {
-    "gatsby": "^3.10.0",
-    "gatsby-plugin-image": "^0.7.2",
+    "gatsby": "^4.11.2",
+    "gatsby-plugin-image": "^2.11.1",
+    "gatsby-plugin-manifest": "^4.11.1",
     "gatsby-plugin-preload-fonts": "^3.11.1",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^2.14.4",
-    "gatsby-source-contentful": "^4.6.4",
+    "gatsby-plugin-react-helmet": "^5.11.0",
+    "gatsby-plugin-sharp": "^4.11.1",
+    "gatsby-remark-images-contentful": "^5.11.0",
+    "gatsby-source-contentful": "^7.9.1",
     "gatsby-transformer-remark": "^5.0.0",
-    "gatsby-transformer-sharp": "^2.12.1",
+    "gatsby-transformer-sharp": "^4.11.0",
+    "gatsby-transformer-sqip": "^4.11.1",
     "gh-pages": "^3.1.0",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "react-scroll-parallax": "^3.0.5"
   },
   "devDependencies": {
     "contentful-import": "^8.2.28",
-    "netlify-cli": "^2.37.0"
+    "netlify-cli": "^9.16.3",
+    "npm-check": "^5.9.2"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -51,6 +55,7 @@
     "setup": "node ./bin/setup.js",
     "netlify:login": "netlify login",
     "netlify:deploy": "netlify deploy -d public -p",
-    "preload-fonts": "gatsby-preload-fonts"
-    }
+    "preload-fonts": "gatsby-preload-fonts",
+    "upgrade-interactive": "npm-check --update"
+  }
 }
