--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
-    "react-scroll-parallax": "^3.0.5"
+    "react-scroll": "^1.8.6",
+    "react-scroll-parallax": "^3.0.5",
+    "react-stickynode": "^4.0.0"
   },
   "devDependencies": {
     "contentful-import": "^8.2.28",
