--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "contentful-starter-gatsby-blog",
-  "description": "Contentful Gatsby Starter Blog",
+  "name": "saskia-eschenbacher",
+  "description": "Dr. Saskia Eschenbacher",
   "private": true,
   "version": "0.0.1",
-  "author": "Contentful <opensource@contentful.com>",
+  "author": "Patrick Lehmann <opensource@contentful.com>",
   "bugs": {
     "url": "https://github.com/contentful/starter-gatsby-blog/issues"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.0",
     "gatsby": "^4.11.2",
-    "gatsby-plugin-image": "^2.11.1",
-    "gatsby-plugin-manifest": "^4.11.1",
-    "gatsby-plugin-preload-fonts": "^3.11.1",
-    "gatsby-plugin-react-helmet": "^5.11.0",
+    "gatsby-plugin-image": "^0.7.2",
+    "gatsby-plugin-manifest": "^2.6.1",
+    "gatsby-plugin-material-ui": "^4.1.0",
+    "gatsby-plugin-preload-fonts": "^1.9.1",
+    "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^4.11.1",
-    "gatsby-remark-images-contentful": "^5.11.0",
-    "gatsby-source-contentful": "^7.9.1",
+    "gatsby-remark-images-contentful": "^2.10.0",
+    "gatsby-source-contentful": "^4.6.4",
     "gatsby-transformer-remark": "^5.0.0",
-    "gatsby-transformer-sharp": "^4.11.0",
+    "gatsby-transformer-sharp": "^2.12.1",
     "gatsby-transformer-sqip": "^4.11.1",
     "gh-pages": "^3.1.0",
     "lodash": "^4.17.21",
@@ -30,8 +34,8 @@
   },
   "devDependencies": {
     "contentful-import": "^8.2.28",
-    "netlify-cli": "^9.16.3",
-    "npm-check": "^5.9.2"
+    "netlify-cli": "^8.14.1",
+    "npm-check": "^4.1.4"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -49,6 +53,7 @@
     "url": "git+https://github.com/ptrcklehmann/saskia.git"
   },
   "scripts": {
+    "start": "gatsby develop",
     "dev": "gatsby develop",
     "build": "gatsby build",
     "heroku-postbuild": "gatsby build",
